--- a/src/main/resources/static/authentication.html
+++ b/src/main/resources/static/authentication.html
@@ -1,5 +1,15 @@
 <html>
+<link href="./css/authentication.css" rel="stylesheet">
+<title>Authentication</title>
+<style>
+		@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
+		h1{
+			font-family: 'Akaya Telivigala', cursive;
+		}
+</style>
 <body>
-<h1><span th:text="${result}"></span></h1>
+<center>
+	<h1 style="color:white">Authentication successful</h1>
+</center>
 </body>
 </html>
